--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-color:lightslategrey;
 }
 
 textarea{
@@ -11,8 +12,12 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
+  height: 100%;
+  font-family: 'Nanum Pen Script', cursive;
+  
 }
-
+ 
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -37,35 +42,59 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #00000057;
   color: #000000;
   border-top: 1px dashed #000000;
+  
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
 }
 
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+  background-color: #d13333b4;
+  color: rgb(255, 255, 255);
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+  transform: scale(2.5);
+
+}
+
+.col-md-2 {
+  color: rgb(255, 255, 255);
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.display-3 {
+  color: greenyellow;
+  font-family: 'Great Vibes', cursive;
+  font-size: 6.5rem;
+}
+
+.lead {
+  color: greenyellow;
+  font-family: 'Great Vibes', cursive;
+  font-size: 2.2rem;
 }
